--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,6 @@
 /* This file is for your main application css. */
 
-@import "./phoenix.css";
+/*@import "./phoenix.css"; */
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
+@import '../node_modules/bulma/css/bulma.css'
