--- a/lib/trivia_web/templates/layout/app.html.eex
+++ b/lib/trivia_web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <title>Trivia · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
-  <body>
+  <body class="section">
     <header>
       <section class="container">
         <a href="http://phoenixframework.org/" class="phx-logo">
@@ -16,8 +16,6 @@
       </section>
     </header>
     <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
     </main>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
