Use Score instead of position.

--- a/lib/trivia_web/templates/page/trivia.html.leex
+++ b/lib/trivia_web/templates/page/trivia.html.leex
@@ -39,7 +39,7 @@
       <% end %>
       <div class="columns">
         <div class="column">
-          <p class="tag is-warning">Positions</p>
+          <p class="tag is-warning">Score</p>
         </div>
       </div>
       <%= for player <- @trivia.players do %>
