Split live templates.

--- a/lib/trivia_web/templates/page/trivia.html.leex
+++ b/lib/trivia_web/templates/page/trivia.html.leex
@@ -4,93 +4,8 @@
       <p class="subtitle">Player: <%= @player_name %></p>
     </div>
   </div>
-  <%= if @trivia do %>
-    <div class="columns">
-      <div class="column">
-        <progress id="progress-bar" class="progress is-info is-small"  value="<%= @trivia.counter %>" max="<%= @trivia.counter_total %>"></progress>
-      </div>
-    </div>
-  <% end %>
-  <%= if @in_game do %>
-    <div class="columns">
-      <div class="column">
-        <p class="subtitle">Status: <%= @trivia.status %></p>
-      </div>
-    </div>
-    <%= if (@trivia_status == "playing") do %>
-      <%= if @trivia.current_question do %>
-        <div class="columns">
-          <div class="column">
-            <p><strong><%= @trivia.used_questions+1 %>/<%=
-               @trivia.total_questions %></strong>
-            <%= Phoenix.HTML.raw @trivia.current_question.text %></p>
-          </div>
-        </div>
-        <%= if @player_info.waiting_response do %>
-          <%= for option <- @trivia.current_question.options do %>
-            <div class="columns">
-              <div class="column">
-                <button class="button is-primary is-small" phx-click="submit_answer" phx-value="<%= option %>"><%= Phoenix.HTML.raw option %></button>
-              </div>
-            </div>
-          <% end %>
-        <% end %>
-      <% end %>
-      <div class="columns">
-        <div class="column">
-          <p class="tag is-warning">Score</p>
-        </div>
-      </div>
-      <%= for player <- @trivia.players do %>
-        <div class="columns">
-          <div class="column">
-            <%= player.name %> - <%= player.points %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-    <%= if (@trivia_status == "finished") do %>
-      <div class="columns">
-        <p class="tag is-success">Winners</p>
-      </div>
-      <%= for player <- @trivia.winners do %>
-        <div class="columns">
-          <div class="column">
-            <%= player.name %> - <%= player.points %>
-          </div>
-        </div>
-      <% end %>
-      <div class="columns">
-        <p class="tag is-success">Q/A</p>
-      </div>
-      <div class="columns">
-        <div class="column">
-          <ol>
-          <%= for question <- @trivia.questions_with_answers do  %>
-            <li><%= Phoenix.HTML.raw question.text %> : <strong><%=
-Phoenix.HTML.raw question.answer %></strong></li>
-          <% end %>
-          </ol>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
-  <%= if @in_game == false do %>
-    <div class="columns">
-      <div class="column">
-        <button class="button is-info" phx-click="create_trivia" phx-value="<%= @player_name %>">Create + Join</button>
-      </div>
-      <div class="column">
-        <p>Trivias running at this moment: <%= @number_of_trivias %></p>
-        <p>Trivias available to join: <%= @number_of_available_trivias %></p>
-      </div>
-    </div>
-    <div class="columns is-multiline is-mobile">
-      <%= for trivia <- @available_trivias do %>
-        <div class="column is-one-fifth">
-          <button class="button is-info" phx-click="join_trivia" phx-value=<%= elem(trivia,0) %>>Join</button>
-        </div>
-      <% end %>
-    </div>
+  <%= case @in_game do %>
+    <% true  -> %> <%= TriviaWeb.PageView.render("game.html", assigns) %>
+    <% false -> %> <%= TriviaWeb.PageView.render("lobby.html", assigns) %>
   <% end %>
 </div>
