--- a/lib/trivia_web/templates/page/game_finished.html.leex
+++ b/lib/trivia_web/templates/page/game_finished.html.leex
@@ -7,7 +7,6 @@
   <div class="columns">
     <div class="column">
      <p><%= if @player_name == player.name, do: "🎉" %> <%= player.name %> - <%= player.points %></p>
-
     </div>
   </div>
 <% end %>
@@ -18,11 +17,11 @@
 </div>
 <div class="columns">
   <div class="column">
-    <ol>
-    <%= for question <- @trivia.questions_with_answers do  %>
-      <li><%= Phoenix.HTML.raw question.text %> : <strong><%=
-Phoenix.HTML.raw question.answer %></strong></li>
-    <% end %>
-    </ol>
+      <ol>
+        <%= for question <- @trivia.questions_with_answers do  %>
+          <li><p><%= Phoenix.HTML.raw question.text %> :
+             <strong><%= Phoenix.HTML.raw question.answer %></strong></p></li>
+        <% end %>
+      </ol>
   </div>
 </div>
