Remove unused attribute.  Refactor.

--- a/lib/trivia_web/templates/page/game.html.leex
+++ b/lib/trivia_web/templates/page/game.html.leex
@@ -13,6 +13,9 @@
   <%= if (@trivia_status == "playing") do %>
     <%= TriviaWeb.PageView.render("game_playing.html", assigns) %>
   <% end %>
+  <%= if (@trivia_status == "playing" or @trivia_status == "waiting") do %>
+    <%= TriviaWeb.PageView.render("game_players.html", assigns) %>
+  <% end %>
   <%= if (@trivia_status == "finished") do %>
     <%= TriviaWeb.PageView.render("game_finished.html", assigns) %>
   <% end %>
