Remove in_game variable from live view.

--- a/lib/trivia_web/templates/page/game.html.leex
+++ b/lib/trivia_web/templates/page/game.html.leex
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<%= if @in_game do %>
+<%= if @trivia != nil do %>
   <div class="columns">
     <div class="column">
       <p class="subtitle">Status: <%= @trivia.status %></p>
